[package]
name = "rbgg"
version = "0.1.0"
edition = "2021"
authors = ["Jay Deiman <jay@splitstreams.com>"]
description = """A simple Rust library that will fetch the BGG data using \
    the APIs defined on boardgamegeek.com \
    (https://boardgamegeek.com/wiki/page/BGG_XML_API).  This will take input \
    queries and return JSON responses."""
license = "GPL-2.0-or-later"
repository = "https://github.com/crustymonkey/rbgg"
homepage = "https://github.com/crustymonkey/rbgg"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
reqwest = { version="0.11", features=["blocking"] }
xmltojson = "0.1"
serde_json = "1"
urlencoding = "2"
tokio = { version="1", features=["test-util", "time", "macros"] }
